--- a/css/main.css
+++ b/css/main.css
@@ -9,14 +9,11 @@ body {
 }
 
 h1 {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    margin-left: 230px;
 }
 
 h3 {
-    display: flex;
-    justify-content: center;
+    margin-left: 268px;
 }
 
 
@@ -27,8 +24,8 @@ h3 {
 #minesLeft {
     display: flex;
     justify-content: center;
-    width: 40px;
-    margin-left: 180px;
+    width: 41px;
+    margin-left: 200px;
     border: solid;
 }
 
@@ -36,28 +33,28 @@ button {
     color: white;
     border: hidden;
     background-color: slategray;
-    margin-left: 100px;
+    margin-left: 55px;
 }
 
 #timer {
     display: flex;
     justify-content: center;
     border: solid;
-    margin-left: 100px;
-    width: 53px;
+    margin-left: 45px;
+    width: 54px;
 }
 
-#gameBoard div {
+#gameboard div {
     font-size: 28px;
     border: 2px solid black;
 }
 
 #gameBoard {
     background-color: #cceef6;
-    width: 243px;
+    width: 245px;
     border: 2px solid black;
     display: grid;
-    margin: 33px 0 0 217px;
+    margin: 33px 0 0 200px;
     grid-template-columns: repeat(9, 27px);
     grid-template-rows: repeat(9, 27px);
     text-align: center;
