--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,11 @@
   
 body {
     margin-left: 200px;
+    margin-bottom: 100%;
     font-family: "Lucida Console", Courier, monospace;
+    background-image: linear-gradient(to bottom right, white, #918c7e, black);
 }
+
 
 h1 {
     margin-left: 18px;
@@ -21,49 +24,59 @@ h3 {
     display: flex;
 }
 
-#minesLeft {
+
+#minesLeft, #timer {
     display: flex;
-    justify-content: center;
+    justify-content: center; 
+    border: solid black;
+}
+
+#minesLeft {
+    border: hidden;
     width: 41px;
-    border: solid;
+
 }
 
 #reset {
     color: white;
     border: hidden;
     background-color: slategray;
-    margin-left: 59px;
+    margin-left: 54px;
 }
 
 #timer {
+    margin-left: 45px;
+    width: 58px;
+}
+
+#minesLeft, #timer {
     display: flex;
     justify-content: center; 
     border: solid;
-    margin-left: 45px;
-    width: 54px;
 }
+
 
 #gameboard div {
     font-size: 20px;
     border: 2px solid black;
 }
 
-#s, #m, #l {
-    width: 60px;
+#s, #l {
+    width: 100px;
     border: hidden;
     color: white;
-    height: 30px;
-    margin: 40px 25px 0 0;
+    font-size: 30px;
+    font-weight: 100;
+    height: 35px;
+    margin-top: 45px;
+    border-radius: 10px;
 }
 
 #s {
-    background-color: #6a8f6d;
-}
-
-#m {
-    background-color: #e0e67a;
+    background-color: #6b6451;
 }
 
 #l {
-    background-color: #873533;
+    background-color: #cfc8b6;
+    margin-left: 50px;
 }
